# genai_loves_fstrings

./: README.md  extractor.py  pyproject.toml  rag.py  ragexample.py  smartllm.py
.devcontainer/: devcontainer.json
solved/extractor/: v1.py  v2.py  v3.py  v4.py  v5.py
solved/rag/: v1.py  v2.py
solved/smartllm/: v1.py  v2.py
