[project]
name = "pycon24llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dspy>=2.5.3",
    "instructor>=1.5.0",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.1",
    "langchain-openai>=0.2.1",
    "langchain>=0.3.2",
]
